# o4e

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPENDENCIES.md  GOALS.md  LLXPRT.md  NEXTTASK.md  PLAN.md  QWEN.md  README.md  RELEASE.md  TODO.md  WORK.md  build.sh  i101.md  llms.sh  pyproject.toml  run.sh  test.sh
.github/workflows/: ci.yml  release.yml
backends/o4e-core/: Cargo.toml
backends/o4e-core/src/: cache.rs  diagnostics.rs  error.rs  lib.rs  surface.rs  traits.rs  types.rs  utils.rs
backends/o4e-icu-hb/: Cargo.toml
backends/o4e-icu-hb/src/: lib.rs
backends/o4e-mac/: Cargo.toml
backends/o4e-mac/src/: lib.rs
backends/o4e-pure/: Cargo.toml
backends/o4e-pure/src/: lib.rs
backends/o4e-win/: Cargo.toml
backends/o4e-win/src/: lib.rs
benches/: batch_render.rs  single_render.rs
crates/o4e-api/: Cargo.toml
crates/o4e-api/src/: lib.rs
crates/o4e-fontdb/: Cargo.toml
crates/o4e-fontdb/src/: lib.rs
crates/o4e-render/: Cargo.toml
crates/o4e-render/src/: batch.rs  lib.rs  outlines.rs  perf.rs  svg.rs
crates/o4e-render/src/snapshots/: o4e_render__svg__tests__svg_cjk_basic.snap  o4e_render__svg__tests__svg_color_emoji.snap  o4e_render__svg__tests__svg_latin_basic.snap
crates/o4e-shaping/: Cargo.toml
crates/o4e-shaping/src/: lib.rs
crates/o4e-unicode/: Cargo.toml
crates/o4e-unicode/src/: lib.rs
docs/: backends.md
examples/: basic_render.py  test_png_output.py
fuzz/: Cargo.toml
python/: Cargo.toml
python/o4e/: __init__.py
python/src/: lib.rs
python/tests/: test_api.py  test_integration.py
reference/: rust-cocoa.md
reference/haforu/: Cargo.toml  pyproject.toml
reference/haforu/python/haforu/: __init__.py  __init__.pyi  py.typed
reference/haforu/python/tests/: test_batch.py  test_errors.py  test_numpy.py  test_streaming.py
reference/haforu/src/: batch.rs  error.rs  fonts.rs  input.rs  lib.rs  main.rs  output.rs  render.rs  security.rs  shaping.rs
reference/haforu/src/python/: batch.rs  errors.rs  mod.rs  streaming.rs  types.rs
reference/renderers/: __init__.py  haforu.py  haforu_batch.py  haforu_python.py  skia.py
testdata/fonts/: README.md
tests/: integration.rs
