[workspace]
resolver = "2"
members = [
    "backends/*",
    "crates/*",
    "python",
]

[package]
name = "o4e"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Open Font Engine - High-performance multi-backend text rendering"

[dependencies]
o4e-core = { path = "backends/o4e-core" }
o4e-icu-hb = { path = "backends/o4e-icu-hb" }

[target.'cfg(target_os = "macos")'.dependencies]
o4e-mac = { path = "backends/o4e-mac" }

[target.'cfg(windows)'.dependencies]
o4e-win = { path = "backends/o4e-win" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "single_render"
harness = false

[[bench]]
name = "batch_render"
harness = false

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Font Laboratory <team@fontlab.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fontlaborg/o4e"

[workspace.dependencies]
# Core dependencies
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# Performance
rayon = "1.10"
lru = "0.12"
memmap2 = "0.9"
parking_lot = "0.12"
dashmap = "6.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Font/Text
harfbuzz_rs = "2.0"
icu_segmenter = { version = "1.5", features = ["compiled_data", "auto"] }
icu_locid = "1.5"
icu_properties = { version = "1.5", features = ["compiled_data"] }
ttf-parser = "0.24"
unicode-bidi = "0.3"

# Python bindings
pyo3 = "0.22"

# Platform-specific (to be added in individual crates)
objc2 = "0.5"
objc2-foundation = "0.2"
core-foundation = "0.10"
core-graphics = "0.24"
core-text = "20.1"
windows = { version = "0.58", features = [
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct2D",
    "Win32_System_Com",
]}
