[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "o4e"
version = "0.1.0"
description = "High-performance, multi-backend text rendering for Python and Rust"
authors = [
    {name = "Font Laboratory", email = "team@fontlab.org"}
]
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Fonts",
    "Topic :: Multimedia :: Graphics",
]

dependencies = []

[project.optional-dependencies]
mac = []  # CoreText backend
windows = []  # DirectWrite backend
icu = []  # ICU+HarfBuzz backend
skia = []  # Skia backend
all = ["o4e[mac,windows,icu,skia]"]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
    "pillow",
    "numpy",
    "black",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/fontlaborg/o4e"
Repository = "https://github.com/fontlaborg/o4e"
Issues = "https://github.com/fontlaborg/o4e/issues"

[tool.maturin]
python-source = "python"
manifest-path = "python/Cargo.toml"
features = ["python", "icu"]
bindings = "pyo3"

[tool.pytest.ini_options]
testpaths = [
    "python/tests",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0",
    "pytest-benchmark",
    "pillow",
    "numpy",
]

[tool.hatch.envs.test.scripts]
test = "pytest python/tests"
