[package]
name = "o4e-icu-hb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ICU+HarfBuzz backend for o4e text rendering"

[dependencies]
o4e-core = { path = "../o4e-core" }
o4e-render = { path = "../../crates/o4e-render" }
o4e-unicode = { path = "../../crates/o4e-unicode" }
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
parking_lot.workspace = true
lru.workspace = true

# Text processing
harfbuzz_rs = "2.0"

# Font handling
ttf-parser = "0.24"
owned_ttf_parser = "0.24"
shellexpand = "3.1"

# Rendering
tiny-skia = "0.11"
png = "0.17"
resvg = "0.42"
usvg = "0.42"
kurbo = "0.11"

[dev-dependencies]
env_logger = "0.11"
