[package]
name = "o4e-fontdb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared font discovery and fallback helpers for o4e"

[dependencies]
o4e-core = { path = "../../backends/o4e-core" }
fontdb = "0.23"
parking_lot.workspace = true
shellexpand = "3.1"
dashmap.workspace = true
once_cell = "1.19"
log.workspace = true
walkdir = "2.5"
anyhow.workspace = true
