[package]
name = "o4e-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rendering utilities for o4e text engine"

[features]
default = ["variable-fonts"]
variable-fonts = [
    "ttf-parser/variable-fonts",
    "owned_ttf_parser/variable-fonts",
]

[dependencies]
o4e-core = { path = "../../backends/o4e-core" }
o4e-fontdb = { path = "../o4e-fontdb" }
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
rayon.workspace = true
parking_lot.workspace = true
hdrhistogram.workspace = true

# For SVG generation
svgtypes = "0.15"
kurbo = "0.11"

# For path simplification (optional - we'll implement our own simple version)
ttf-parser.workspace = true
owned_ttf_parser.workspace = true
shellexpand = "3"
lyon_geom.workspace = true

[dev-dependencies]
insta = "1.39"
